--- a/stylus/layout.styl
+++ b/stylus/layout.styl
@@ -60,6 +60,7 @@
   height: 100%;
   background: #262626;
   border-right:1px solid #262626;
+//coach
 .coach-parent
     nav
       background-color #fff
@@ -92,6 +93,15 @@
 
 
 //layout
+.nav-bar-edge
+  position fixed
+  left 0
+  top 0
+  width 81px
+  height 100%
+  background #262626
+  border-right 1px solid #262626
+
 .aside-nav
   position fixed
   left 0
